--- a/src/stylesheets/Menu.css
+++ b/src/stylesheets/Menu.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@400;500;600;700&display=swap');
+
+ .App{
+  background-image:linear-gradient(rgba(0, 0, 0, 0.5), #04dbb7);
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 120vh;
+  overflow-x: hidden;
+  overflow-y: hidden; 
+}  
 .food-list{
   display:flex;
   gap: 80px;
@@ -10,7 +20,7 @@
   left: 42%;
   top: 70%;
   margin: 10px;
-  padding: 15px;
+  padding: 15px 55px;
   border-radius: 10px;
   background-color: #04DBB7;
 
@@ -20,8 +30,26 @@
   cursor: pointer;
 }
 .food-card button {
- padding:5px;
- border-radius: 10px;
+ padding:10px;
+ border-radius: 10px 27px;
+}
+.food-card img{
+  height:200px;
+  width: 250px;
+  border-radius: 10px;
+
+}
+.food-card button{
+  background-color: #96e2d6;
+  
+}
+.food-card button:hover{
+  background-color:#04DBB7;
+  cursor: pointer;
+}
+.food-paisa{
+  float: right;
+  font-size: 1.1rem;
 }
 
 
